RESOLVED FIXED 42842
[EFL] Log function is incorrectly used
https://bugs.webkit.org/show_bug.cgi?id=42842
Summary [EFL] Log function is incorrectly used
Lucas De Marchi
Reported 2010-07-22 13:08:13 PDT
[EFL] Log function is incorrectly used
Attachments
Patch (1.32 KB, patch)
2010-07-22 13:12 PDT, Lucas De Marchi
no flags
Lucas De Marchi
Comment 1 2010-07-22 13:12:22 PDT
Antonio Gomes
Comment 2 2010-07-22 13:17:06 PDT
Comment on attachment 62329 [details] Patch r=me
WebKit Commit Bot
Comment 3 2010-07-22 19:03:10 PDT
Comment on attachment 62329 [details] Patch Clearing flags on attachment: 62329 Committed r63939: <http://trac.webkit.org/changeset/63939>
WebKit Commit Bot
Comment 4 2010-07-22 19:03:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.