WebCore/platform/efl/WidgetEfl.cpp
@@ -222,8 +222,8 @@ void Widget::applyFallbackCursor()
         return;
     }
 #endif
-    LOG("Ooops, no fallback to set cursor %s!\n",
-        m_data->m_cursorGroup.utf8().data());
+    LOG_ERROR("Ooops, no fallback to set cursor %s!\n",
+              m_data->m_cursorGroup.utf8().data());
 }
 
 void Widget::applyCursor()
